--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,15 @@
 OddWord - Release History
 
+release-1.0.0.2 - 2013.05.14
+
+  * Fixed misdefinition of type synonyms for Word10, Word12, and Word14,
+    and extended test suite. (Thanks to Benno Fünfstück)
+
 release-1.0.0.1 - 2012.12.30
 
   * Fixed compilation with base-4.6 (GHC 7.6).
-  * Fixed bug in Read instance and extended test suite.
+  * Fixed bug in Read instance and extended test suite. (Thanks to Tikhon
+    Jelvis)
 
 release-1.0.0 - 2011.07.21
 
