--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
 OddWord - Release History
 
+release-1.0.1.0 - 2015.10.25
+
+  * Added optional support for GHC type-level literals.
+  * Added FiniteBits instance.
+  * Added more test coverage.
+  * Fixed bug in toEnum function and extended test suite. (Thanks to Pasqualino     "Titto" Assini)
+  * Fixed warnings when compiling test suite with base-4.7 (GHC 7.8).
+  * Relaxed QuickCheck version constraint.
+
 release-1.0.0.2 - 2013.05.14
 
   * Fixed misdefinition of type synonyms for Word10, Word12, and Word14,
